--- a/jogo_da_velha_com_botão.html
+++ b/jogo_da_velha_com_botão.html
@@ -1,7 +1,7 @@
 <meta charset="UTF-8">
 
     <link rel="stylesheet" href="reset.css">
-    <link rel="stylesheet" href="testando.css">
+    <link rel="stylesheet" href="posicionamento.css">
 <div id = "tudo">
     
         <div id = "coluna1">
