--- a/jogo_da_velha/jogo_da_velha_com_botão.html
+++ b/jogo_da_velha/jogo_da_velha_com_botão.html
@@ -1,7 +1,12 @@
 <meta charset="UTF-8">
     <!--links --> 
 
-
+<!--                                font Itim parece um pincel
+<link href="https://fonts.googleapis.com/css2?family=Itim&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.gstatic.com">    
+-->
+<link href="https://fonts.googleapis.com/css2?family=Girassol&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.gstatic.com">
 <link rel="stylesheet" href="reset.css">
 <link rel="stylesheet" href="posicionamento.css">
 
@@ -41,7 +46,10 @@
         </div>
     </div>
 
-    <div id = "empatou"></div>
+    <div id = "empatou">
+        
+    </div>
+
     <div id="play"><button id="botaoPlay">Play</button></div>
 
    
@@ -375,7 +383,6 @@
                 empatou.style.height = "0";
                 empatou.style.left = "0";
                 empatou.style.top = "0";
-
             }
 
             function mostraX(txt){
