--- a/forca/index.html
+++ b/forca/index.html
@@ -11,8 +11,8 @@
     <section id=container>
         <h1 id="nomeDoJogo">Jodo Da Forca</h1>
         <div>
-            <input id="palavra" type="text">
-            <input id="enviaPalavra" type="submit">
+            <input id="palavra" type="password">
+            <input id="enviaPalavra" type="submit" onclick="palavraChave(criaLista())">
         </div>
         <div id="personagem"></div>
         <div>
