--- a/forca/index.html
+++ b/forca/index.html
@@ -12,7 +12,7 @@
         <h1 id="nomeDoJogo">Jodo Da Forca</h1>
         <div>
             <input id="palavra" type="password">
-            <input id="enviaPalavra" type="submit" onclick="palavraChave(criaLista())">
+            <input id="enviaPalavra" type="submit">
         </div>
         <div id="personagem"></div>
         <div>
